# remote_server_monitor_mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  lint.yml  security.yml  test.yml
config/: servers.example.yaml
docs/: EXAMPLES.md  PROJECT_STRUCTURE.md
scripts/: setup.sh
src/server_monitor_mcp/: __init__.py  __main__.py  server.py
src/server_monitor_mcp/ssh/: __init__.py  client.py  config.py
src/server_monitor_mcp/tools/: __init__.py  command.py  process.py  system.py
src/server_monitor_mcp/utils/: __init__.py  logger.py
tests/: __init__.py  test_ssh_client.py
